[package]
name = "solana-arborist"
description = "CLI for common operations on Metaplex Bubblegum compressed NFTs."
authors = ["Holaplex <engineering@holaplex.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arborist"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.26"
anyhow = "1.0.72"
bs58 = "0.5.0"
clap = { version = "4.3.17", features = ["cargo", "derive", "env"] }
lazy_static = "1.4.0"
mpl-bubblegum = { version = "0.9.2", features = ["no-entrypoint"] }
rpassword = "7.2.0"
solana-clap-v3-utils = "1.14"
solana-cli-config = "1.14"
solana-client = "1.14"
solana-remote-wallet = "1.14"
solana-sdk = "1.14"
spl-account-compression = { version = "0.1.10", features = ["no-entrypoint"] }
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
thiserror = "1.0.44"
tiny-bip39 = "0.8"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
uriparse = "0.6.4"
